--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 
         <div>
             <br>
-            <h1>Fullname list</h1>
+            <h1 style="display: none;">Fullname list</h1>
             <ul class="list-ul">
                 
             </ul>
         </div>
+
+
+        <div class="error"></div>
     </div>
    
 
